# llm-judge-self-preference

./: .gitignore  HPC_RUNBOOK.md  HPC_SYNC_RUNBOOK.md  INCIDENTS.md  PATCH_BUNDLE_FREEZE_512.md  PREREGISTRATION.md  README.md  README_artifact_normalization.md  bootstrap_hpc_env.sh  cli.py  judge_bias_env.sh  matching_audit.json  pyproject.toml  repair_effective_constraint_lifestyle_leak.py  repair_prompt_conditioning_empty_literal_assert.py  repair_prompt_conditioning_test.py  repair_run_generation_print_literal.py  repair_topup_and_active_day_guard.py  requirements-hpc.txt  slurm-487111.out  slurm-487112.out  slurm-487151.out  smoke_pairs.json  smoke_sampler_config.json
analyze/: figures.py  load.py  models.py  rubric_deltas.py  run_analysis.py  style_audit.py
compat/: trailtraining_client.py
docs/: EXPERIMENT_CONTROLS.md  HPC_PILOT_CHECKLIST.md  HPC_RUNBOOK.md  HPC_TROUBLESHOOTING.md  INCIDENTS.md  LOCAL_SMOKE_TEST.md  PREREGISTRATION.md  TEMPERATURE_SWEEPS.md
fixtures/: build.py  spec.py
generate/: artifact_leakage.py  artifact_normalization.py  constants.py  exact_counts.py  final_validation.py  fit_priors.py  llm_arm.py  normalize_corpus_for_judging.py  persistence.py  programmatic_arm.py  provenance.py  run_generation.py  sampler.py  structural_expectations.py  study_manifest.py  temperature.py  trailtraining_compat.py
hpc/: quota.py
judge/: canonicalize.py  harness.py  normalize.py  outputs.py  panel.py  vllm_server.py
match/: features.py  filtering.py  pair.py
slurm/: common.sh  pre_cache_models.sh  run_generation.sh  run_generation_hpc.sh  run_judge.sh  run_judge_hpc.sh  run_preflight.sh  run_vllm_smoke.sh  submit_generation.sh  submit_judge.sh  submit_judge_hpc.sh  submit_judge_panel_hpc.sh
smoke_artifacts/: matching_audit.json  smoke_pairs.json  smoke_sampler_config.json
smoke_judgments/: pairwise_qwen_7b_judge_canonical_masked.jsonl  pairwise_qwen_7b_judge_canonical_masked_t000.jsonl  softeval_qwen_7b_judge.jsonl  softeval_qwen_7b_judge_t000.jsonl
smoke_judgments_qwen_pilot/: pairwise_qwen_7b_judge_raw_normalized_t000.jsonl
smoke_plans/: r_high__rc_high__ph_peak__llama_3.1_8b_instruct__s000.json.provenance.json  r_high__rc_high__ph_peak__llama_3.1_8b_instruct__s001.json.provenance.json  r_high__rc_high__ph_peak__llama_3.1_8b_instruct__s002.json  r_high__rc_high__ph_peak__llama_3.1_8b_instruct__s002.json.provenance.json  r_high__rc_high__ph_peak__llama_3.1_8b_instruct__s003.json.provenance.json  r_high__rc_high__ph_peak__llama_3.1_8b_instruct__src_t070__exp_t000__s000.json.provenance.json  r_high__rc_high__ph_peak__llama_3.1_8b_instruct__src_t070__exp_t000__s001.json.provenance.json  r_high__rc_high__ph_peak__llama_3.1_8b_instruct__src_t070__exp_t000__s002.json.provenance.json  r_high__rc_high__ph_peak__llama_3.1_8b_instruct__src_t070__exp_t000__s003.json.provenance.json  r_high__rc_high__ph_peak__prog__exp_t000__s000.json  r_high__rc_high__ph_peak__prog__exp_t000__s000.json.provenance.json  r_high__rc_high__ph_peak__prog__exp_t000__s001.json.provenance.json  r_high__rc_high__ph_peak__prog__exp_t000__s002.json.provenance.json  r_high__rc_high__ph_peak__prog__exp_t000__s003.json  r_high__rc_high__ph_peak__prog__exp_t000__s003.json.provenance.json  r_high__rc_high__ph_peak__prog__s000.json.provenance.json  r_high__rc_high__ph_peak__prog__s001.json  r_high__rc_high__ph_peak__prog__s001.json.provenance.json  r_high__rc_high__ph_peak__prog__s002.json  r_high__rc_high__ph_peak__prog__s002.json.provenance.json  r_high__rc_high__ph_peak__prog__s003.json.provenance.json  r_low__rc_low__ph_base__llama_3.1_8b_instruct__s000.json.provenance.json  r_low__rc_low__ph_base__llama_3.1_8b_instruct__s001.json.provenance.json  r_low__rc_low__ph_base__llama_3.1_8b_instruct__s002.json  r_low__rc_low__ph_base__llama_3.1_8b_instruct__s002.json.provenance.json  r_low__rc_low__ph_base__llama_3.1_8b_instruct__s003.json.provenance.json  r_low__rc_low__ph_base__llama_3.1_8b_instruct__src_t070__exp_t000__s000.json.provenance.json  r_low__rc_low__ph_base__llama_3.1_8b_instruct__src_t070__exp_t000__s001.json.provenance.json  r_low__rc_low__ph_base__llama_3.1_8b_instruct__src_t070__exp_t000__s002.json.provenance.json  r_low__rc_low__ph_base__llama_3.1_8b_instruct__src_t070__exp_t000__s003.json.provenance.json  r_low__rc_low__ph_base__prog__exp_t000__s000.json  r_low__rc_low__ph_base__prog__exp_t000__s000.json.provenance.json  r_low__rc_low__ph_base__prog__exp_t000__s001.json  (+10 more)
smoke_results/: summary.json  (+9 more)
(+77 files in other folders)
