[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "judge-bias-study"
version = "0.1.0"
description = "LLM-judge self-preference study on marathon training plans (Bocconi HPC)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Study authors" }]

dependencies = [
    # Pin trailtraining to the SHA verified by tests/verify_trailtraining_surface
    # (or by manual symbol audit). DO NOT use @main — the study reaches into
    # several private helpers (_apply_eval_coach_guardrails_compat,
    # _finalize_training_plan_artifact, _merge_machine_plan_and_explanations,
    # _parse_machine_plan, _parse_plan_explanation) whose signatures are not
    # part of any public stability contract.
    #
    # Replace <PINNED_SHA> with the SHA you have verified against. To bump:
    #   1. git -C trailtraining log -1 --pretty=%H
    #   2. update the SHA below
    #   3. re-run `python tests/run_tests.py`
    #   4. add an INC entry in INCIDENTS.md recording the new SHA
    "trailtraining @ git+https://github.com/MauriceCC04/trailtraining.git@<PINNED_SHA>",
    "openai>=1.0.0",
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
analysis = [
    "numpy>=1.26",
    "pandas>=2.2",
    "statsmodels>=0.14",
    "scipy>=1.11",
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "compat*",
    "generate*",
    "fixtures*",
    "match*",
    "judge*",
    "analyze*",
    "tools*",
    "vendor_patches*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]
ignore = ["E501"]